--- a/index.html
+++ b/index.html
@@ -30,21 +30,18 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Josiah Sturgis</h1>
+        <h2>Junior in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a junior at Bob Jones University. I am majoring in business andministration and minoring in aviation.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I go to University Baptist Church in Clemson, South Carolina.  There I help teach the first and second graders sundayschool class.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I like to be in the outdoors exploring, hiking, camping, and mountainbiking any chance I get.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Business Administration<br />
         Bob Jones University
     </div>
            
